Bug 42609 - [4.5 regression] undesired operation when working with mno-cygwin
Summary: [4.5 regression] undesired operation when working with mno-cygwin
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Dave Korn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-04 14:00 UTC by gee
Modified: 2010-04-01 20:27 UTC (History)
2 users (show)

See Also:
Host: i686-pc-cygwin
Target: i686-pc-mingw32
Build: i686-pc-cygwin
Known to work: 4.4.0
Known to fail: 4.5.0
Last reconfirmed: 2010-02-17 15:10:49


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gee 2010-01-04 14:00:41 UTC
hi i'm using gcc in i686-pc-cygwin and building djvulibre library for target i686-pc-mingw32 version of gcc in two platform is from latest git reprository.

and i'm using following configuration for djvulibre
./configure --prefix=/usr/i686-pc-mingw32 CC='gcc -mno-cygwin' CXX='g++ -mno-cygwin -I/usr/include/w32api' --target=i686-pc-mingw32 --host=i686-pc-mingw32

at link step, there is problem for new, delete operator function wrapper
(defined in cygwin.h #define CXX_WRAP_SPEC_LIST)

below are trial and error.
------------
i686-pc-mingw32-g++ -shared  .libs/DjVuGlobal.o .libs/DjVuGlobalMemory.o .libs/GOS.o .libs/GException.o .libs/GContainer.o .libs/GString.o .libs/GThreads.o .libs/GRect.o .libs/atomic.o .libs/GSmartPointer.o .libs/MMX.o .libs/Arrays.o .libs/GBitmap.o .libs/GPixmap.o .libs/GScaler.o .libs/DjVuPalette.o .libs/ByteStream.o .libs/IFFByteStream.o .libs/BSByteStream.o .libs/BSEncodeByteStream.o .libs/ZPCodec.o .libs/JB2Image.o .libs/JB2EncodeCodec.o .libs/IW44Image.o .libs/IW44EncodeCodec.o .libs/MMRDecoder.o .libs/JPEGDecoder.o .libs/DataPool.o .libs/GURL.o .libs/DjVuFileCache.o .libs/DjVuPort.o .libs/GMapAreas.o .libs/DjVuAnno.o .libs/GIFFManager.o .libs/DjVuText.o .libs/DjVuInfo.o .libs/DjVuFile.o .libs/DjVuImage.o .libs/DjVuDocument.o .libs/DjVmDir.o .libs/DjVmDoc.o .libs/DjVmDir0.o .libs/DjVmNav.o .libs/DjVuNavDir.o .libs/DjVuErrorList.o .libs/DjVuDocEditor.o .libs/DjVuToPS.o .libs/DjVuDumpHelper.o .libs/DjVuMessageLite.o .libs/DjVuMessage.o .libs/GUnicode.o .libs/UnicodeByteStream.o .libs/XMLParser.o .libs/XMLTags.o .libs/miniexp.o .libs/ddjvuapi.o .libs/debug.o  /usr/i686-pc-mingw32/lib/libjpeg.dll.a  -mtune=i686 -mthreads -Wl,--export-all-symbols -o .libs/libdjvulibre-21.dll -Wl,--image-base=0x10000000 -Wl,--out-implib,.libs/libdjvulibre.dll.a
Creating library file: .libs/libdjvulibre.dll.a
---------------------------------
g++ -mno-cygwin -shared  .libs/DjVuGlobal.o .libs/DjVuGlobalMemory.o .libs/GOS.o .libs/GException.o .libs/GContainer.o .libs/GString.o .libs/GThreads.o .libs/GRect.o .libs/atomic.o .libs/GSmartPointer.o .libs/MMX.o .libs/Arrays.o .libs/GBitmap.o .libs/GPixmap.o .libs/GScaler.o .libs/DjVuPalette.o .libs/ByteStream.o .libs/IFFByteStream.o .libs/BSByteStream.o .libs/BSEncodeByteStream.o .libs/ZPCodec.o .libs/JB2Image.o .libs/JB2EncodeCodec.o .libs/IW44Image.o .libs/IW44EncodeCodec.o .libs/MMRDecoder.o .libs/JPEGDecoder.o .libs/DataPool.o .libs/GURL.o .libs/DjVuFileCache.o .libs/DjVuPort.o .libs/GMapAreas.o .libs/DjVuAnno.o .libs/GIFFManager.o .libs/DjVuText.o .libs/DjVuInfo.o .libs/DjVuFile.o .libs/DjVuImage.o .libs/DjVuDocument.o .libs/DjVmDir.o .libs/DjVmDoc.o .libs/DjVmDir0.o .libs/DjVmNav.o .libs/DjVuNavDir.o .libs/DjVuErrorList.o .libs/DjVuDocEditor.o .libs/DjVuToPS.o .libs/DjVuDumpHelper.o .libs/DjVuMessageLite.o .libs/DjVuMessage.o .libs/GUnicode.o .libs/UnicodeByteStream.o .libs/XMLParser.o .libs/XMLTags.o .libs/miniexp.o .libs/ddjvuapi.o .libs/debug.o  /usr/i686-pc-mingw32/lib/libjpeg.dll.a  -mtune=i686 -mthreads -Wl,--export-all-symbols -o .libs/libdjvulibre-21.dll -Wl,--image-base=0x10000000 -Wl,--out-implib,.libs/libdjvulibre.dll.a
KNS_4GURLE[DJVU::lt_XMLTags::create(DJVU::GURL const&)]+0x17): undefined referen
ce to `___wrap__Znwj'
.libs/DjVuMessageLite.o:DjVuMessageLite.cpp:(.text$_ZN4DJVU10lt_XMLTags6createER
KNS_4GURLE[DJVU::lt_XMLTags::create(DJVU::GURL const&)]+0x56): undefined referen
ce to `___wrap__ZdlPv'
.libs/DjVuMessageLite.o:DjVuMessageLite.cpp:(.text$_ZN4DJVU10lt_XMLTags6createER
KNS_2GPINS_10ByteStreamEEE[DJVU::lt_XMLTags::create(DJVU::GP<DJVU::ByteStream> c
onst&)]+0x17): undefined reference to `___wrap__Znwj'
.libs/DjVuMessageLite.o:DjVuMessageLite.cpp:(.text$_ZN4DJVU10lt_XMLTags6createER
KNS_2GPINS_10ByteStreamEEE[DJVU::lt_XMLTags::create(DJVU::GP<DJVU::ByteStream> c
onst&)]+0x56): undefined reference to `___wrap__ZdlPv'
.libs/DjVuMessageLite.o:DjVuMessageLite.cpp:(.text$_ZN4DJVU10lt_XMLTags6createER
NS_13XMLByteStreamE[DJVU::lt_XMLTags::create(DJVU::XMLByteStream&)]+0x17): undef
ined reference to `___wrap__Znwj'
.libs/DjVuMessageLite.o:DjVuMessageLite.cpp:(.text$_ZN4DJVU10lt_XMLTags6createER
NS_13XMLByteStreamE[DJVU::lt_XMLTags::create(DJVU::XMLByteStream&)]+0x56): undef
ined reference to `___wrap__ZdlPv'
.libs/DjVuMessageLite.o:DjVuMessageLite.cpp:(.text$_ZN4DJVU10lt_XMLTags6addtagEN
S_2GPIS0_EE[DJVU::lt_XMLTags::addtag(DJVU::GP<DJVU::lt_XMLTags>)]+0x32): undefin
ed reference to `___wrap__Znwj'
.libs/DjVuMessageLite.o:DjVuMessageLite.cpp:(.text$_ZN4DJVU10lt_XMLTags6addtagEN
S_2GPIS0_EE[DJVU::lt_XMLTags::addtag(DJVU::GP<DJVU::lt_XMLTags>)]+0x107): undefi
ned reference to `___wrap__Znwj'
.libs/DjVuMessageLite.o:DjVuMessageLite.cpp:(.text$_ZN4DJVU10lt_XMLTags6addtagEN
S_2GPIS0_EE[DJVU::lt_XMLTags::addtag(DJVU::GP<DJVU::lt_XMLTags>)]+0x158): undefi
ned reference to `___wrap__Znwj'
.libs/DjVuMessage.o:DjVuMessage.cpp:(.text+0x33e): undefined reference to `___wr
ap__Znwj'
.libs/DjVuMessage.o:DjVuMessage.cpp:(.text+0x579): undefined reference to `___wr
ap__Znwj'
.libs/DjVuMessage.o:DjVuMessage.cpp:(.text+0x71c): more undefined references to
`___wrap__Znwj' follow
.libs/DjVuMessage.o:DjVuMessage.cpp:(.text+0x28f5): undefined reference to `___w
rap__ZdlPv'
.libs/DjVuMessage.o:DjVuMessage.cpp:(.text+0x5b): undefined reference to `___wra
p__ZdlPv'
.libs/GUnicode.o:GUnicode.cpp:(.text+0x2fa): undefined reference to `___wrap__Zn
wj'
.libs/GUnicode.o:GUnicode.cpp:(.text+0x358): undefined reference to `___wrap__Zn
wj'
.libs/GUnicode.o:GUnicode.cpp:(.text+0x385): undefined reference to `___wrap__Zd
lPv'
.libs/GUnicode.o:GUnicode.cpp:(.text+0x1e7): undefined reference to `___wrap__Zd
lPv'
.libs/UnicodeByteStream.o:UnicodeByteStream.cpp:(.text+0x14dd): undefined refere
nce to `___wrap__Znwj'
.libs/UnicodeByteStream.o:UnicodeByteStream.cpp:(.text+0x1534): undefined refere
nce to `___wrap__ZdlPv'
.libs/UnicodeByteStream.o:UnicodeByteStream.cpp:(.text+0x157): undefined referen
ce to `___wrap__ZdlPv'
.libs/UnicodeByteStream.o:UnicodeByteStream.cpp:(.text+0x1c7): undefined referen
ce to `___wrap__ZdlPv'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x2e8): undefined reference to `___wrap__
Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0xd66): undefined reference to `___wrap__
Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x1607): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x1635): undefined reference to `___wrap_
_ZdlPv'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x171f): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x17ca): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x1c42): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x1d33): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x1db3): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x1eca): more undefined references to `__
_wrap__Znwj' follow
.libs/XMLParser.o:XMLParser.cpp:(.text+0x39e3): undefined reference to `___wrap_
_ZdlPv'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x3a7e): undefined reference to `___wrap_
_ZdlPv'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x4168): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x41de): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x5f3a): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x5f9d): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x6000): undefined reference to `___wrap_
_Znwj'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x6063): more undefined references to `__
_wrap__Znwj' follow
.libs/XMLParser.o:XMLParser.cpp:(.text+0x7b): undefined reference to `___wrap__Z
dlPv'
.libs/XMLParser.o:XMLParser.cpp:(.text+0x450): undefined reference to `___wrap__
ZdlPv'
.libs/XMLTags.o:XMLTags.cpp:(.text+0x6b8): undefined reference to `___wrap__Znwj
'
.libs/XMLTags.o:XMLTags.cpp:(.text+0xec8): undefined reference to `___wrap__Znwj
'
.libs/XMLTags.o:XMLTags.cpp:(.text+0x14a4): undefined reference to `___wrap__Znw
j'
.libs/XMLTags.o:XMLTags.cpp:(.text+0x1a5e): undefined reference to `___wrap__Znw
j'
.libs/XMLTags.o:XMLTags.cpp:(.text+0x1b1e): undefined reference to `___wrap__Znw
j'
.libs/XMLTags.o:XMLTags.cpp:(.text+0x223d): undefined reference to `___wrap__Zdl
Pv'
.libs/XMLTags.o:XMLTags.cpp:(.text+0x27a8): undefined reference to `___wrap__Znw
j'
.libs/XMLTags.o:XMLTags.cpp:(.text+0xdb): undefined reference to `___wrap__ZdlPv
'
.libs/miniexp.o:miniexp.cpp:(.text+0x34b): undefined reference to `___wrap__ZdaP
v'
.libs/miniexp.o:miniexp.cpp:(.text+0x390): undefined reference to `___wrap__Znaj
'
.libs/miniexp.o:miniexp.cpp:(.text+0x433): undefined reference to `___wrap__Znaj
'
.libs/miniexp.o:miniexp.cpp:(.text+0x463): undefined reference to `___wrap__ZdaP
v'
.libs/miniexp.o:miniexp.cpp:(.text+0x56b): undefined reference to `___wrap__ZdaP
v'
.libs/miniexp.o:miniexp.cpp:(.text+0xdd5): undefined reference to `___wrap__ZdaP
v'
.libs/miniexp.o:miniexp.cpp:(.text+0x1043): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x111a): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x1140): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x118a): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x11f3): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x1213): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x1239): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x12bb): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x12e6): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x136b): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x13a7): undefined reference to `___wrap__Zdl
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x1ceb): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x1e89): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x22bf): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x255d): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x288a): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x2b07): more undefined references to `___wra
p__Znwj' follow
.libs/miniexp.o:miniexp.cpp:(.text+0x2b22): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x2b54): undefined reference to `___wrap__Zdl
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x2edc): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x2f04): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3054): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x307c): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x32a0): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x32c7): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x32fc): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x332b): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3589): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x35b5): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3602): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x365c): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x367e): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x3700): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x3740): undefined reference to `___wrap__Znw
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x3768): undefined reference to `___wrap__Zna
j'
.libs/miniexp.o:miniexp.cpp:(.text+0x3a1a): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3a78): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3bec): undefined reference to `___wrap__Zdl
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3c1c): undefined reference to `___wrap__Zdl
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3c67): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3c6f): undefined reference to `___wrap__Zdl
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3c93): undefined reference to `___wrap__Zda
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x3c9b): undefined reference to `___wrap__Zdl
Pv'
.libs/miniexp.o:miniexp.cpp:(.text+0x301): undefined reference to `___wrap__ZdlP
v'
.libs/miniexp.o:miniexp.cpp:(.text+0x32b): undefined reference to `___wrap__ZdlP
v'
.libs/miniexp.o:miniexp.cpp:(.text+0x580): undefined reference to `___wrap__ZdlP
v'
.libs/miniexp.o:miniexp.cpp:(.text+0x75a): undefined reference to `___wrap__ZdlP
v'
.libs/miniexp.o:miniexp.cpp:(.text+0x22ff): more undefined references to `___wra
p__ZdlPv' follow
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x699): undefined reference to `___wrap__Zn
wj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x10be): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x1118): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x1501): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x1850): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x1d36): more undefined references to `___w
rap__Znwj' follow
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x28ca): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x2936): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x3b73): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x3c25): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x3d06): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x3d55): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x4883): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x5774): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x8451): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x84a4): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x86e4): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x8735): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x87cf): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x889f): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x92d5): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x936a): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x94ef): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x98dd): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x9b5c): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0xccfb): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0xd21f): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0xec51): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0xeeaf): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0xefa9): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0xf0cc): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0xf1fb): undefined reference to `___wrap__Z
nwj'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0xf29d): more undefined references to `___w
rap__Znwj' follow
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x851f): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text+0x89f8): undefined reference to `___wrap__Z
dlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text$_ZN4DJVU15ddjvu_message_pD0Ev[DJVU::ddjvu_m
essage_p::~ddjvu_message_p()]+0x37): undefined reference to `___wrap__ZdlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text$_ZN4DJVU17ddjvu_thumbnail_pD0Ev[DJVU::ddjvu
_thumbnail_p::~ddjvu_thumbnail_p()]+0x37): undefined reference to `___wrap__ZdlP
v'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text$_ZN4DJVU15ddjvu_context_sD0Ev[DJVU::ddjvu_c
ontext_s::~ddjvu_context_s()]+0x4d): undefined reference to `___wrap__ZdlPv'
.libs/ddjvuapi.o:ddjvuapi.cpp:(.text$_ZN4DJVU8GMapImplINS_11GUTF8StringEiE13get_
or_createERKS1_[DJVU::GMapImpl<DJVU::GUTF8String, int>::get_or_create(DJVU::GUTF
8String const&)]+0x68): undefined reference to `___wrap__Znwj'
collect2: ld returned 1 exit status
------------------------------------------------------------------------
djvulibre is using its own new, delete operator function.

when we use -mno-cygwin flag for gcc with host i686-pc-cygwin,
stdcxx wrappers for cygwin must be disabled because of libcygwin.a is not linked with it.
but, when building gcc for target i686-pc-cygwin , USE_CYGWIN_LIBSTDCXX_WRAPPERS and -mno-use-libstdc-wrappers seems to be enabled.
then, CXX_WRAP_SPEC_LIST will be enabled although it must be disabled when added flag -mno-cygwin. causing undefined symbol problem which i had.

but when linking with i686-pc-mingw32-g++, it has no undefined symbol problem. because there is no --wrap argument.

please consider to fix this problem
Comment 1 Richard Biener 2010-01-04 14:16:11 UTC
This sounds more like a cygwin problem, not a GCC one.
Comment 2 Dave Korn 2010-02-17 15:10:49 UTC
(In reply to comment #1)
> This sounds more like a cygwin problem, not a GCC one.

It's a problem with the cygwin target-dependent linker spec.

The -mno-cygwin option is deprecated and scheduled to be withdrawn, so I was tempted to close this as WONTFIX; in general, the future answer to all problems with "-mno-cygwin" is going to be "use a real mingw-targeted cross-compiler instead".

However removing it properly involves some code changes and stuff that I'd really rather only do during stage1.  I guess it would be such a simple and safe fix to tweak the spec that I'm tempted to repair rather than remove it for 4.5.  I'll spin up a patch.

Comment 3 Dave Korn 2010-04-01 01:11:31 UTC
I figure this is worth fixing in the ~22-hour window remaining before 2nd April.  The option although deprecated should not for preference be released in a broken state, and since it worked in all previous versions (i.e. before I added the libstdc++ wrappers) this is a regression.  The fix should be really really trivial:

Index: gcc/config/i386/cygwin.h
===================================================================
--- gcc/config/i386/cygwin.h	(revision 157789)
+++ gcc/config/i386/cygwin.h	(working copy)
@@ -108,7 +108,7 @@ along with GCC; see the file COPYING3.  If not see
 #define CXX_WRAP_SPEC_OPT "muse-libstdc-wrappers"
 #endif
 
-#define CXX_WRAP_SPEC "%{" CXX_WRAP_SPEC_OPT ":" CXX_WRAP_SPEC_LIST "}"
+#define CXX_WRAP_SPEC "%{!mno-cygwin:%{" CXX_WRAP_SPEC_OPT ":" CXX_WRAP_SPEC_LIST "}}"
 
 #else /* !defined (USE_CYGWIN_LIBSTDCXX_WRAPPERS)  */
 

I'll set the bootstrap going now.  That'll leave me some time to test it this coming lunchtime/afternoon/evening (UK time) and check it in long before midnight.

Richard G., please speak up if you have any objection to this plan, if I haven't heard anything from you by a few hours before the midnight deadline I'll assume you're ok with it.
Comment 4 rguenther@suse.de 2010-04-01 12:04:27 UTC
Subject: Re:  [4.5 regression] undesired operation when working
 with mno-cygwin

On Thu, 1 Apr 2010, davek at gcc dot gnu dot org wrote:

> ------- Comment #3 from davek at gcc dot gnu dot org  2010-04-01 01:11 -------
> I figure this is worth fixing in the ~22-hour window remaining before 2nd
> April.  The option although deprecated should not for preference be released in
> a broken state, and since it worked in all previous versions (i.e. before I
> added the libstdc++ wrappers) this is a regression.  The fix should be really
> really trivial:
> 
> Index: gcc/config/i386/cygwin.h
> ===================================================================
> --- gcc/config/i386/cygwin.h    (revision 157789)
> +++ gcc/config/i386/cygwin.h    (working copy)
> @@ -108,7 +108,7 @@ along with GCC; see the file COPYING3.  If not see
>  #define CXX_WRAP_SPEC_OPT "muse-libstdc-wrappers"
>  #endif
> 
> -#define CXX_WRAP_SPEC "%{" CXX_WRAP_SPEC_OPT ":" CXX_WRAP_SPEC_LIST "}"
> +#define CXX_WRAP_SPEC "%{!mno-cygwin:%{" CXX_WRAP_SPEC_OPT ":"
> CXX_WRAP_SPEC_LIST "}}"
> 
>  #else /* !defined (USE_CYGWIN_LIBSTDCXX_WRAPPERS)  */
> 
> 
> I'll set the bootstrap going now.  That'll leave me some time to test it this
> coming lunchtime/afternoon/evening (UK time) and check it in long before
> midnight.
> 
> Richard G., please speak up if you have any objection to this plan, if I
> haven't heard anything from you by a few hours before the midnight deadline
> I'll assume you're ok with it.

It looks reasonable - well, I don't know nothing about cygwin.  But
it doesn't touch other targets, so if a cygwin maintainer is ok with
it I'm fine with it as well.

Richard.
Comment 5 Dave Korn 2010-04-01 20:22:30 UTC
bootstrapped, manual testing, and g++ testing now got far enough to verify the critical testcases g++.old-deja/g++.abi/cxa_vec.C and g++.old-deja/g++.brendan/new3.C aren't affected, which would be the place where any problem in this change would show up.  about to commit.
Comment 6 Dave Korn 2010-04-01 20:24:52 UTC
Subject: Bug 42609

Author: davek
Date: Thu Apr  1 20:24:35 2010
New Revision: 157931

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=157931
Log:
	PR target/42609
	* config/i386/cygwin.h (CXX_WRAP_SPEC): Disable spec when -mno-cygwin.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/cygwin.h

Comment 7 Dave Korn 2010-04-01 20:27:27 UTC
> Comment Required
> You have to specify a comment on this change. Please explain your change.

"I fixed it, so I set the resolution to 'FIXED'".  Silly bugzilla!