	PR target/42609 	* config/i386/cygwin.h (CXX_WRAP_SPEC): Disable spec when -mno-cygwin.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157931 138bc75d-0d04-0410-961f-82ee72b054a4